--- a/page2.html
+++ b/page2.html
@@ -1,24 +1,10 @@
 <!doctype html>
 <html lang="fr">  
 	<head>
+		<title>Formulaire de contact La chouette agence</title>  
 		<meta charset="utf-8">
 		<meta name="description" content="La chouette agence est une agence de web design, basée à Lyon, qui aide les entreprises à devenir attractives et visibles sur internet. Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible. Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site."> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-		<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-		
-		<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="style.css">
-		<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
-		<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
-		<link rel="canonical" href="http://lachouetteagence/index.com"/>  
-		
-		
-		<script src="./js/jquery-2.1.0.min.js"></script>
-		<script src="./js/bootstrap.min.js"></script>
-		<script src="./js/blocs.min.js"></script>
-		<script src="./js/jqBootstrapValidation.js"></script>
-		<script src="./js/formHandler.js"></script>
-		<title>Formulaire de contact La chouette agence</title>  
 
 		<meta property="og:title" content="La chouette agence"/> 
 		<meta property="og:type" content="La chouette agence"/> 
@@ -33,148 +19,106 @@
 		<meta name="twitter:creator" content="@Lydia_Tremor">  
 		<meta name="twitter:image" content="http://lachouetteagence.com/favicon.jpg">  
 
+		<link rel="shortcut icon" type="image/png" href="favicon.jpg">
+		<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
+		<link rel="canonical" href="http://lachouetteagence/index.com"/>  
+		
 	<!-- Analytics -->
 	
 	<!-- Analytics END -->
 		
 	</head>
-<body>
-<!-- Principal conteneur -->
-<div class="page-container">
-    
-<!-- bloc-0 -->
-<div class="bloc bgc-white l-bloc " id="bloc-0">
-	<div class="container bloc-sm align-img-contact">
-		<nav class="navbar row">
-			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="atlanta web design logo" height="40" /></a>
-				<!--<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-				</button>--> <!--supprimé-->
-			</div>
-			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
-				<ul class="site-navigation nav navbar-nav">
-					<li>
-						<a href="index.html">Accueil</a>
-					</li>
-					<!--<li>
-					</li>
-					<li>
-						<a href="page2.html">page2 &gt;</a>
-					</li>--> <!--supprimé-->
-				</ul>
-			</div>
-		</nav>
-	</div>
-</div>
-<!-- bloc-0 END -->
 
-<!-- bloc-6 -->
-<div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
-	<div class="container bloc-lg">
-		<div class="row">
-			<div class="col-sm-12">
-				<h1 class="text-center hero-bloc-text tc-white">
-					Parlons web design !
-				</h1>
-				<p class="text-center mg-lg tc-white tight-width-whitespace">
-					Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
-					Parlez-nous de votre projet en complétant le formulaire ci-dessous.
-				</p>
+	<body>
+		<!-- Principal conteneur -->
+		<div class="page-container"></div>
+			
+		<!-- bloc-0 -->
+		<div class="bloc bgc-white l-bloc " id="bloc-0">
+			<div class="container bloc-sm align-img-contact">
+				<div class="navbar-header">
+					<a class="navbar-brand" href="index.html" title="page d'accueil"><img src="img/la-chouette-agence.png" alt="atlanta web design logo" height="40" /></a>
+				</div>
+				<div class="collapse navbar-collapse navbar-1 special-dropdown-nav site-navigation nav navbar-nav">
+					<a href="index.html" title="page d'accueil">Accueil</a>
+				</div>
 			</div>
 		</div>
-	</div>
-</div>
-<!-- bloc-6 END -->
+		<!-- bloc-0 END -->
 
-<!-- bloc-7 -->
-<div class="bloc bgc-white l-bloc" id="bloc-7">
-	<div class="container bloc-lg">
-		<div class="row">
-			<div class="col-sm-6">
-				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
-					<div class="form-group">
-						<label>
-							Nom
-						</label>
-						<input id="name" class="form-control" placeholder="Dupont" required />
-					</div>
-					<div class="form-group">
-						<label>
-							Adresse email
-						</label>
-						<input id="email" class="form-control" placeholder="adresse@gmail.com" type="email" required />
-					</div>
-					<div class="form-group">
-						<label>
-							Comment nous avez-vous connu ?
-						</label>
-						<input class="form-control" type="email" required id="input_504" />
-					</div>
-					<div class="form-group">
-						<label>
-							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-						</label><textarea id="message" class="form-control size-resp" rows="4" cols="50" required></textarea>
-					</div> 
-					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
-						Envoyer
-					</button>
-				</form>
-			</div>
-			<div class="col-sm-6 space-adress">
-				<p>
-					contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
-				</p>
-			</div>
-		</div>
-	</div>
-</div>
-<!-- bloc-7 END -->
-
-<!-- ScrollToTop Button -->
-<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
-<!-- ScrollToTop Button END-->
-
-
-<!-- Footer - bloc-8 -->
-<!--<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
-	<div class="container bloc-sm">
-		<div class="row">
-			<div class="col-sm-12">
-				<p class="text-center white">
-					La chouette agence - Agence web basée à Lyon.<br>
-				</p>
-				<div class="row row-no-gutters social">
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
-						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
-						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
-						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
-						</div>
+		<!-- bloc-6 -->
+		<div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
+			<div class="container bloc-lg">
+				<div class="row">
+					<div class="col-sm-12">
+						<h1 class="text-center hero-bloc-text tc-white">
+							Parlons web design !
+						</h1>
+						<p class="text-center mg-lg tc-white tight-width-whitespace">
+							Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
+							Parlez-nous de votre projet en complétant le formulaire ci-dessous.
+						</p>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-</div>--> <!--supprimé-->
-<!-- Footer - bloc-8 END -->
+		<!-- bloc-6 END -->
 
-</div>
-<!-- Principal conteneur END -->
-    
+		<!-- bloc-7 -->
+		<div class="bloc bgc-white l-bloc" id="bloc-7">
+			<div class="container bloc-lg">
+				<div class="row">
+					<div class="col-sm-6">
+						<form id="form_1" novalidate>
+							<div class="form-group">
+								<label>
+									Nom
+								</label>
+								<input id="name" class="form-control" placeholder="Dupont" required />
+							</div>
+							<div class="form-group">
+								<label>
+									Adresse email
+								</label>
+								<input id="email" class="form-control" placeholder="adresse@gmail.com" type="email" required />
+							</div>
+							<div class="form-group">
+								<label>
+									Comment nous avez-vous connu ?
+								</label>
+								<input class="form-control" type="email" required id="input_504" />
+							</div>
+							<div class="form-group">
+								<label>
+									Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
+								</label><textarea id="message" class="form-control size-resp" rows="4" cols="50" required></textarea>
+							</div> 
+							<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
+								Envoyer
+							</button>
+						</form>
+					</div>
+					<div class="col-sm-6 space-adress">
+						<p>
+							contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- bloc-7 END -->
 
-</body>
+		<!-- ScrollToTop Button -->
+		<a href="#" title="bouton" class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+		<!-- ScrollToTop Button END-->
+		
+		<script src="./js/jquery-2.1.0.min.js"></script>
+		<script src="./js/bootstrap.min.js"></script>
+		<script src="./js/blocs.min.js"></script>
+		<script src="./js/jqBootstrapValidation.js"></script>
+		<script src="./js/formHandler.js"></script>
+	</body>
 </html>
